<resources>
    <string name="app_name">TheMovieDB</string>
    <string name="action_popular_movies">Popular Movies</string>
    <string name="action_top_rated_movies">Top Rated Movies</string>
    <string name="action_saved_movies">Saved Movies</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Movie List</string>
    <string name="second_fragment_label">Movie Details</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="todo">TODO</string>
    <string name="movies_are_being_loaded">Movies are being loaded</string>
    <string name="fragment_third_label">Movie Extras</string>
    <string name="imdb">IMDB</string>
    <string name="dd_to_db">dd_to_db</string>
    <string name="remove_from_db">remove_from_db</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="the_review">The Review: </string>
    <string name="click_the_link_below_to_see_the_whole_review">Click the link below to see the whole review</string>
</resources>