<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.themoviedb.MovieListFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_moive_list">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.themoviedb.MovieDetailFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_movie_detail">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
        <argument
            android:name="movie"
            app:argType="com.example.themoviedb.model.Movie" />
        <action
            android:id="@+id/action_SecondFragment_to_thirdFragment"
            app:destination="@id/ThirdFragment" />
    </fragment>
    <fragment
        android:id="@+id/ThirdFragment"
        android:name="com.example.themoviedb.MovieExtrasFragment"
        android:label="@string/fragment_third_label"
        tools:layout="@layout/fragment_movie_extras" >
        <action
            android:id="@+id/action_thirdFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
        <argument
            android:name="movie"
            app:argType="com.example.themoviedb.model.Movie" />
    </fragment>
</navigation>